# alicevision-for-mac

./: .gitignore  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL_macOS.md  LICENSE  PORTING_NOTES.md  README.md  RELEASE.md  SECURITY.md  llms.txt  mkdocs.yml  onnx_to_coreml.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml
Formula/: alicevision-for-mac.rb
ai-models/: README.md
cmake/: Metal.cmake  UpstreamShim.cmake  Warnings.cmake  upstream-config.hpp.in
cmake/shims/: Findlz4.cmake
docs/: changelog.md  index.md  perf-history.md
docs/dev/: adapter.md  adding-kernel.md  apple-silicon-optimization.md  architecture.md  build.md  codebase-navigation.md  overview.md  perf.md  plugin-system.md  segmentation-pipeline.md  testing.md
docs/reference/: binaries.md  cmake-options.md  kernels.md  mental-notes.md  segmentation.md
docs/user/: install.md  meshroom.md  native-ui.md  pipeline.md  segmentation.md  troubleshooting.md
meshroom-mac/: CHANGES.md  NODE_DEVELOPMENT.md  README.md  WINDOWS_EXE.md  requirements.txt  segmentation  setupInitScriptWindows.py  start.sh
meshroom-mac/localfarm/: README.md  localFarmBackend.py  localFarmClient.py  localFarmLauncher.py  test.py
meshroom-mac/meshroom/: __init__.py
meshroom-mac/nodes/: cameraTracking.mg  cameraTrackingDepth.mg  cameraTrackingLegacy.mg  cameraTrackingRoma.mg  cameraTrackingWithoutCalibration.mg  cameraTrackingWithoutCalibrationLegacy.mg  colorCalibration.mg  distortionCalibration.mg  hdrFusion.mg  lidarMeshing.mg  multi-viewPhotometricStereo.mg  nodalCameraTracking.mg  nodalCameraTrackingWithoutCalibration.mg  panoramaFisheyeHdr.mg  panoramaHdr.mg  photogrammetry.mg  photogrammetryAndCameraTracking.mg  photogrammetryAndCameraTrackingLegacy.mg  photogrammetryDraft.mg  photogrammetryLegacy.mg  photogrammetryObject.mg  photogrammetryObjectTurntable.mg  photogrammetryObjectTwoSides.mg  photometricStereo.mg  rawImageConversion.mg
meshroom-mac/tests/: test_attributeChoiceParam.py  test_attributeDescDefaults.py  test_attributeKeyValues.py  test_attributeLambda.py  test_attributeShape.py  test_attributes.py  test_compatibility.py  test_compute.py  test_graph.py  test_graphIO.py  test_groupAttributes.py  test_invalidation.py  test_listAttribute.py  test_nodeAttributeChangedCallback.py  test_nodeAttributesFormatting.py  test_nodeCommandLineFormatting.py  test_nodeDynamicOutputs.py  test_nodes.py  test_plugins.py  test_submit.py  utils.py
meshroom-native/: Package.swift  README.md
scripts/: aggregate_meshroom_timing.py  build_dmg.sh  build_seg_e2e_graph.py  codesign_macos_app.sh  download_ai_models.sh  download_models.py  make_dmg.sh  obj_stats.py  package_macos_app.sh  phase12_install_smoke.sh  pipeline_coverage.py  probe_sem_origins.py  profile_segmentation.py  profile_segmentation_light.py  run_meshroom.sh  sigint_launch.py
src/av_gpu/: CMakeLists.txt
src/av_gpu/include/av/gpu/: Buffer.hpp  CommandBuffer.hpp  Device.hpp  Errors.hpp  Pipeline.hpp  Queue.hpp  Texture.hpp
src/av_gpu/src/: Buffer.cpp  CommandBuffer.cpp  Device.cpp  Pipeline.cpp  Queue.cpp  Texture.cpp  metal_cpp_impl.cpp
src/depth_map_metal/: CMakeLists.txt
src/depth_map_metal/include/av/depth_map/: ColorOps.hpp  CompNCC.hpp  DepthSimMap.hpp  DeviceCache.hpp  DeviceMipmapImage.hpp  DevicePatchPattern.hpp  DeviceStreamManager.hpp  Eig33.hpp  GaussianFilter.hpp  GaussianTable.hpp  ImageColorConversion.hpp  LRUCache.hpp  MatrixOps.hpp  MipmappedArray.hpp  PatchOps.hpp  SimStatOps.hpp  Volume.hpp  adapter_profile.hpp  upstream_adapter.hpp
src/depth_map_metal/src/: ColorOps.cpp  CompNCC.cpp  DepthSimMap.cpp  DeviceCache.cpp  DeviceMipmapImage.cpp  DeviceStreamManager.cpp  Eig33.cpp  GaussianFilter.cpp  GaussianTable.cpp  ImageColorConversion.cpp  MatrixOps.cpp  MipmappedArray.cpp  PatchOps.cpp  SimStatOps.cpp  Volume.cpp  adapter_profile.cpp  upstream_adapter.cpp  upstream_adapter_types.hpp
src/depth_map_metal/src/cuda_host_shim/: DeviceCache.cpp  DeviceStreamManager.cpp  patchPattern.cpp  utils.cpp
src/moge/: CMakeLists.txt
src/moge/aliceVision_shim/: main_moGe.cpp
src/moge/include/av/moge/: CoreMLMoGeRunner.hpp
src/moge/src/: CoreMLMoGeRunner.mm
src/roma/: CMakeLists.txt
src/roma/aliceVision_shim/: main_matchMasking.cpp
src/roma/include/av/roma/: CoreMLRomaMatcher.hpp
src/roma/src/: CoreMLRomaMatcher.mm
src/sphere_detection/: CMakeLists.txt
src/sphere_detection/aliceVision_shim/: main_sphereDetection.cpp  sphereDetection.cpp
src/sphere_detection/aliceVision_shim/aliceVision/sphereDetection/: sphereDetection.hpp
src/sphere_detection/include/av/sphere/: CoreMLSphereDetector.hpp
src/sphere_detection/src/: CoreMLSphereDetector.mm
tests/: CMakeLists.txt  test_color.cpp  test_comp_ncc.cpp  test_comp_ncc_custom_pattern.cpp  test_compute_normal.cpp  test_compute_similarity.cpp  test_cuda_host_shim.cpp  test_cuda_memory_shim.cpp  test_depth_pipeline.cpp  test_depth_sim_map_copy.cpp  test_device_cache.cpp  test_device_mipmap_image.cpp  test_device_stream_manager.cpp  test_eig33.cpp  test_gaussian_filter.cpp  test_gaussian_filter_volume.cpp  test_image_color_conversion.cpp  test_matrix.cpp  test_metal_hello.cpp  test_multi_t_aggregation.cpp  test_normal_map_upscale.cpp  test_optimize_depth_sim_map.cpp  test_patch.cpp  test_refine_best_depth.cpp  test_refine_pipeline.cpp  test_refine_similarity.cpp  test_retrieve_best_depth.cpp  test_sgm_accuracy.cpp  test_sgm_pipeline.cpp  test_sgm_pipeline_via_adapter.cpp  test_simstat.cpp  test_smooth_thickness.cpp  test_texture_smoke.cpp  test_upscale_depth_pixsize.cpp  test_upstream_adapter.cpp  test_volume_easy.cpp  test_volume_optimize.cpp  test_volume_optimize_adaptive_p2.cpp
tests/python/: conftest.py  test_app_bundle.py  test_meshroom_mac_ui.py  test_moge_coreml.py  test_pipeline_integration.py  test_pyalicevision_native.py  test_roma_coreml.py  test_scenepreview_node.py  test_segmentation.py  test_sphere_detection_coreml.py  test_viewer3d_helpers.py
(+380 files in other folders)
